WIP: Support relative font sizes in text markup
Submitted by gbz..@..net.nu
Link to original bug (#170055)
Description
Pango markup language doesn't currently allow use of a scale factor, like
possible with the GtkTextTag or PangoAttribute.
It could be useful to have though, being more exact and convenient than nesting
many <span size="larger">
which are the only current relative size attributes.
Version: 1.8.x
Depends on
Edited by Matthias Clasen