Support size as percentage in markup

Test included.

Closes https://gitlab.gnome.org/GNOME/pango/issues/23